
  [ Updated manpages translations ]
  * French (Florent Usseil).

  [ Raphael Hertzog ]
  * Small fix in "3.0 (quilt)" source format when using non-standard name
    of the quilt series.
  * Handle debian.tar.gz files like diff.gz in dpkg-buildpackage and
    dpkg-genchanges to detect the kind of upload.
  * Add "armel" to /usr/share/dpkg/archtable. Closes: #487768

  [ Updated dpkg translations ]
  * Thai (Theppitak Karoonboonyanan). Closes: #488090

 -- Raphael Hertzog <hertzog@debian.org>  Wed, 18 Jun 2008 10:19:51 +0200

dpkg (1.14.20) unstable; urgency=low

  [ Guillem Jover ]
  * Change UTF-8 '©' to '(C)' in deb-version.5 (unfuzzy translations).
  * Document --force-breaks in 'dpkg --force-help' output.
  * Document triggers --debug values in dpkg.1. Thanks to Sven Joachim.
  * Improve package descriptions for dpkg, dpkg-dev and dselect.
    Thanks to Justin B Rye for the review and corrections. Closes: #484002
  * When dpkg-divert does renames do no check the target file if the source
    does not exist and the rename is thus being disabled. This also allows
    to remove bogus diversions. Closes: #476973, #469033
  * Properly close triggers 'File' file, so it does not get leaked to childs.

  [ Raphael Hertzog ]
  * Add missing 'use File::Path' in Dpkg::Source::Package::V3::quilt.
  * Use debian/patches/debian-changes-<version> (without the trailing ".diff")
    as default name for the automatic patch created by the format "3.0
    (quilt)". This ensures a saner cohabitation with patch systems that
    apply all of debian/patches/*.{diff,patch}.
  * Improve patch parser to accept more patches that are accepted by patch
    itself.
  * Correctly skip comments in quilt series files (concerns "3.0 (quilt)" source
    packages). Closes: #486323
  * The automatically created patches (in source package formats "2.0" and
    "3.0 (quilt)") will now contain "/dev/null" as previous filename when the
    patch creates a new file (instead of putting the same name).