@@ -9,6 +9,9 @@ dpkg (1.14.21) UNRELEASED; urgency=low
   * Handle debian.tar.gz files like diff.gz in dpkg-buildpackage and
     dpkg-genchanges to detect the kind of upload.
   * Add "armel" to /usr/share/dpkg/archtable. Closes: #487768
+  * Modified Dpkg::BuildOptions to recognize and use spaces as separator
+    in DEB_BUILD_OPTIONS (in order to conform with the Debian policy
+    ruling established in #430649).
 
   [ Updated dpkg translations ]
   * Thai (Theppitak Karoonboonyanan). Closes: #488090
